# promptmaxx

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  UX_PROTOTYPE.md  index.html  install.sh  package-lock.json  package.json  run-dev.sh
.github/workflows/: release.yml
crates/pmaxx/: Cargo.toml
crates/pmaxx/src/: main.rs
crates/promptmaxx/: Cargo.toml
crates/promptmaxx-core/: Cargo.toml
crates/promptmaxx-core/src/: claude_history.rs  db.rs  error.rs  git.rs  lib.rs  models.rs
crates/promptmaxx-ollama/: Cargo.toml
crates/promptmaxx-ollama/src/: analysis.rs  client.rs  error.rs  lib.rs
crates/promptmaxx/src/: db.rs  error.rs  lib.rs  models.rs
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: claude_history.rs  git.rs  main.rs
src/styles/: main.css
