[workspace]
resolver = "2"
members = [
    "crates/promptmaxx-core",
    "crates/promptmaxx-ollama",
    "crates/pmaxx",
    "src-tauri",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["you"]
license = "MIT"

[workspace.dependencies]
# Shared dependencies
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
dirs = "5"
thiserror = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }

# Internal crates
promptmaxx-core = { path = "crates/promptmaxx-core" }
promptmaxx-ollama = { path = "crates/promptmaxx-ollama" }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
