[package]
name = "pmaxx"
version.workspace = true
edition.workspace = true
description = "Prompt enhancer"

[[bin]]
name = "pmaxx"
path = "src/main.rs"

[dependencies]
promptmaxx-core = { workspace = true }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { workspace = true }
serde_json = { workspace = true }
