[package]
name = "promptmaxx-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core library for promptmaxx - shared models, database, and utilities"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
dirs = { workspace = true }
thiserror = { workspace = true }
rusqlite = { workspace = true }
