[package]
name = "promptmaxx-ollama"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Ollama integration for prompt enhancement and analysis"

[dependencies]
promptmaxx-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
