[package]
name = "promptmaxx"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Save and retrieve prompts"

[dependencies]
serde = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
dirs = { workspace = true }
thiserror = { workspace = true }
rusqlite = { workspace = true }
